[project]
name = "streamnative"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-secret-manager>=2.23.1",
    "pulsar-client==3.6.0",
    "pydantic-settings>=2.8.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
